Inclusion des polices de caractère

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,12 @@
 a{
     margin-left:10px; 
 }
+
+
+.menu_link{
+    font-family: 'Ubuntu', sans-serif;
+}
+
+p{
+    font-family: 'Vollkorn', serif;
+}
