--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -1,11 +1,5 @@
-
-body{
-    margin:0; 
-}
-
-body * {
-    box-sizing: border-box; 
-    
+a{
+    margin-left:10px; 
 }
 
 
@@ -15,107 +9,4 @@ body * {
 
 p{
     font-family: 'Vollkorn', serif;
-}
-
-
-.titre{
-    font-family: 'Ubuntu', sans-serif;    
-}
-
-.contenu{
-    font-family: 'Vollkorn', serif;    
-}
-
-
-
-
-
-/*Accueil*/ 
-
-.boutton-carrousel{
-    border-radius: 50px;
-    padding: 14px 24px;
-    font-size: 1em;
-    background-color: #714900;
-    color: white;
-    font-weight: 600;
-}
-
-.boutton-carrousel:hover{
-    cursor: pointer; 
-}
-
-.changement-langue{
-    border:solid; 
-    display:inline-block; 
-}
-
-.changement-langue a{
-    width: 20%;
-    border: solid;
-}
-
-.changement-langue a img{
-    width: 20%;
-    border: solid;
-}
-
-.contenu-accueil{
-    z-index: 2;
-    color: white;
-    width: 30%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-
-}
-
-.contenu-accueil-main{
-    border: solid;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    position: relative;
-}
-
-
-
-
-
-.image-accueil{
-    height:100%; 
-    width:100%;
-    filter: brightness(42%) contrast(150%);
-    position:absolute; 
-    z-index:-1; 
-}
-
-
-.logoPrincipal{
-    width:10%; 
-}
-
-.logoPrincipal img{
-    width:100%; 
-}
-
-
-.menu{
-    border: solid;
-    display: flex;
-    justify-content: space-around;
-}
-
-
-.titre-contenu{
-    font-size: 8em;
-    margin-bottom: 30px;
-}
-
-.sous-titre-contenu{
-    font-size: 2em;
-    margin-bottom: 30px;
 }
