--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -70,7 +70,7 @@ p{
 
 }
 
-.contenu-accueil-main{
+.contenu-accueil-principal{
     border: solid;
     width: 100%;
     height: 100vh;
@@ -81,7 +81,9 @@ p{
     position: relative;
 }
 
+.contenu-accueil-main:hover .fleche-de-defilement{
 
+}
 
 
 
