--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -2,6 +2,9 @@ a{
     margin-left:10px; 
 }
 
+body{
+    margin:0; 
+}
 
 .menu_link{
     font-family: 'Ubuntu', sans-serif;
@@ -54,6 +57,15 @@ p{
     border: solid;
 }
 
+.contenu-carrousel-centre{
+    z-index: 2;
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+}
+
 .contenu-accueil{
     z-index: 2;
     color: white;
@@ -61,13 +73,11 @@ p{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
 }
 
 .contenu-accueil-principal{
     border: solid;
-    width: 100%;
-    height: 100vh;
+    height: 99.4vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -77,6 +87,11 @@ p{
 
 .contenu-accueil-main:hover .fleche-de-defilement{
 
+}
+
+
+.country-flag{
+    width:1vw; 
 }
 
 
@@ -99,7 +114,7 @@ p{
 }
 
 
-.menu{
+.menu-principal{
     border: solid;
     display: flex;
     justify-content: space-around;
