--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -130,3 +130,113 @@ p{
     font-size: 2em;
     margin-bottom: 30px;
 }
+
+
+/*----------------------------
+Style de la barre de navigation
+ ----------------------------*/
+/* Style the navbar */
+.header {
+    background-color: #f1f1f1;
+    padding: 30px;
+    text-align: center;
+}
+
+#navbar {
+    overflow: hidden;
+    background-color: #333;
+}
+
+#navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+#navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+#navbar a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.content {
+    padding: 16px;
+}
+
+.style_when_scrool {
+    position: fixed;
+    top: 0;
+    width: 100%
+}
+
+.style_when_scrool + .content {
+    padding-top: 60px;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
+}
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    font-family: Arial;
+}
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+}
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: #714900;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #714900;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
