--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -238,9 +238,18 @@ Style de la barre de navigation
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+
 /*------------------------------
 Vue lieux culturels
  */
+.image-fond{
+    position: fixed;
+    filter: blur(5px) brightness(28%);
+    top: 0;
+    z-index: -5;
+    left:-5px; 
+}
 .mon-container{
     width: 80%;
     margin: 0 auto;
