--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -153,6 +153,18 @@ p{
 }
 
 
+#map{
+    text-align:center;
+    width: 80vw;
+    height: 70vh;
+    box-shadow: 0px 7px 40px #000000;
+}
+
+.map-container{
+    width:80vw;
+    margin: 0 auto ;
+}
+
 .menu-principal{
     border: solid;
     display: flex;
@@ -164,6 +176,12 @@ p{
     font-size: 6em;
     margin-bottom: 30px;
     text-align:center; 
+}
+
+.texte-presentation{
+    margin-top:10%;
+    padding: 10px 30%;
+    text-align: center;
 }
 
 .sous-titre-contenu{
