--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -211,73 +211,6 @@ p{
 }
 
 
-/*----------------------------
-Style de la barre de navigation
- ----------------------------*/
-/* Style the navbar */
-
-/*
-.inn_navbar{
-    background-color: inherit;
-}
-.navbar {
-    overflow: hidden;
-    background-color: #333;
-    z-index: 30;
-}
-
-.navbar a {
-    float: right;
-    font-size: 16px;
-    color: white!important;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    border-radius:4px;
-}
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-}
-.dropdown {
-    float: right;
-    overflow: hidden;
-}
-
-.btn-simple{
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
 
 /*------------------------------
 Vue lieux culturels
@@ -289,6 +222,14 @@ Vue lieux culturels
     z-index: -5;
     left:-5px; 
 }
+
+.titre-categorie{
+    color: white;
+    font-size: 3em;
+    text-align: center;
+    margin:10px 0;
+}
+
 .mon-container{
     width: 80%;
     margin: 0 auto;
