--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -261,6 +261,7 @@ Vue lieux culturels
     position: fixed;
     filter: blur(5px) brightness(28%);
     top: 0;
+    width:101%;
     z-index: -5;
     left:-5px; 
 }
