--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -393,6 +393,7 @@ Vue lieux culturels
 .dropdown-content, .dropdown-content a{
     transform: scaleY(0);
     transform-origin: 50% 0;
+
     transition:transform .8s ease-in-out;
 }
 
@@ -401,12 +402,17 @@ Vue lieux culturels
     padding: 12px 16px;
     text-decoration: none;
     display:block; 
+
+    transform :  translateX(20px);
+    opacity: 0; 
+    transition:transform .8s ease-in-out .5s , opacity .8s ease-in-out .5s;
 }
 
 .dropdown-content a:hover {background-color: #4c4b4b}
 
 .dropdown:hover .dropdown-content , .dropdown:hover .dropdown-content a{
-    transform: scaleY(1);    
+    opacity : 1;
+    transform: scaleY(1) ;    
     display:block; 
 }
 
