--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -401,8 +401,7 @@ Vue lieux culturels
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    display:block; 
-
+    display:block;
     transform :  translateX(20px);
     opacity: 0; 
     transition:transform .8s ease-in-out .5s , opacity .8s ease-in-out .5s;
@@ -422,6 +421,8 @@ Vue lieux culturels
 }
 .btn-simple:hover{
     background-color: #714900;
+    border-radius:3px;
+    margin-top: -1px;
 }
 /*-------------------------------
  Design du footer
@@ -515,7 +516,7 @@ padding: 5px;
     flex-wrap: wrap;
 }
 .img-mairie{
-    width: 45%;
+    width: 20%;
     margin: 0px 10px 0px 10px;
 }
 .desc-img-mairie{
@@ -533,4 +534,12 @@ padding: 5px;
 }
 a{
     text-decoration: none;
+}
+/*-------------------------------------
+ITEM ACTIVE
+_______________________________________ */
+
+.active{
+    background-color: #714900;
+    border-radius: 5px;
 }
