--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -206,6 +206,7 @@ p{
 .texte-presentation-bandeau{
     background-color: white; 
     margin-top:10px;
+    padding:18vh 0 ;
 }
 
 .texte-presentation-header-border{
